# winpeers-exodus

./: .env  Cargo.toml  aws_cli_email_bulk.json  aws_cli_email_single.json  build.sh  docker-setup.yml  email_html.html  log-config.yml  reset_password_email_template.json  verify_email_template.json  welcome_mail_template.json  winpeers-exodus.service
.github/workflows/: deploy.yml
ca-certificates/: eu-north-1-root.pem
migrations/2023-05-21-114914_create_todo_table/: up.sql
migrations/2023-06-04-192434_create_user_table/: up.sql
migrations/2023-06-04-192601_create_fantasy_contest_table/: down.sql  up.sql
src/: main.rs
src/api/: api.rs  handler.rs  mod.rs
src/config/: config.rs  jwt_auth.rs  mod.rs
src/controller/: handler.rs
src/model/: response.rs  user.rs
src/models/: mod.rs  response.rs  schema.rs  todo.rs  token_claims.rs  user.rs
src/repository/: database.rs  redis.rs
src/service/: user.rs
src/util/: mod.rs  random_num_gen.rs  random_num_or_string_gen.rs  real_ip_key_extractor.rs  send_email.rs  token.rs
