[package]
name = "winpeers-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.0"
cargo-watch = "8.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
deadpool = "0.9.5"
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel-async = { version ="0.3.0", features = ["postgres", "deadpool", "tokio"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
log = "0.4.18"
log4rs = "1.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
