[package]
name = "winpeers-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-governor = "0.4.0"
actix-web = "4.3.1"
argon2 = "0.5.0"
base64 = "0.21.2"
cargo-watch = "8.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
deadpool = "0.9.5"
deadpool-redis = { version = "0.12.0", features = ["serde"] }
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono", "uuid", "64-column-tables"] }
diesel-async = { version ="0.3.0", features = ["postgres", "deadpool", "tokio"] }
dotenv = "0.15.0"
futures = "0.3.28"
getrandom = "0.2.10"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.18"
log4rs = "1.2.0"
mobc = "0.8.1"
mobc-redis = "0.8.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
rusoto_core = "0.48.0"
rusoto_ses = "0.48.0"
rustls = "0.21.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"]}
tokio-postgres = "0.7.8"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
